force-app/main/default/objects/EFT_Processing_Config__c/EFT_Processing_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>EFT Processing Config</label>
</CustomObject>