force-app/main/default/objects/EFT_Processing_Config__c/fields/CCS_EFT_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CCS_EFT_RecordTypeID__c</fullName>
    <description>record type id for CCS EFT</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCS EFT RecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>