force-app/main/default/objects/EFT_Processing_Config__c/fields/CCS_Unallocated_Payment_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CCS_Unallocated_Payment_RecordTypeID__c</fullName>
    <description>CCS Unallocated Payment RecordTypeID EFT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCS Unallocated Payment RecordTypeID EFT</inlineHelpText>
    <label>CCS Unallocated Payment RecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>