force-app/main/default/objects/EFT_Processing_Config__c/fields/Insolvency_EFT_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_EFT_RecordTypeID__c</fullName>
    <description>record type ID for Insolvency EFT record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insolvency EFT RecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>