force-app/main/default/objects/EFT_Processing_Config__c/fields/Insolvency_Payment_Record_TypeID__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Payment_Record_TypeID__c</fullName>
    <description>Record type id of Insolvency Payment for EFT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Record type id of Insolvency Payment for EFT</inlineHelpText>
    <label>Insolvency Payment Record TypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>