force-app/main/default/objects/EFT_Processing_Config__c/fields/Insolvency_Unallocated_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Unallocated_RecordTypeId__c</fullName>
    <description>Insolvency Unallocated Payment RecordTypeID EFT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insolvency Unallocated Payment RecordTypeID EFT</inlineHelpText>
    <label>Insolvency Unallocated RecordTypeId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>