force-app/main/default/objects/EFT_Processing_Config__c/fields/Product_Payment_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Product_Payment_RecordTypeID__c</fullName>
    <description>Product Payment RecordTypeID EFT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product Payment RecordTypeID EFT</inlineHelpText>
    <label>Product Payment RecordTypeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>